--- a/src/css/common.css
+++ b/src/css/common.css
@@ -50,7 +50,7 @@ button[data-stop]:disabled {
   padding: 15px;
   font-size: 18px;
   border: none;
-  border-bottom: 2px solid #0077b3; /* Синьо-голубий колір */
+  border-bottom: 2px solid #0077b3; 
   outline: none;
   background: transparent;
   color: #333;
