--- a/src/css/common.css
+++ b/src/css/common.css
@@ -19,6 +19,11 @@ img {
 
 /* -------------task-01------------- */
 
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
 button[data-start],
 button[data-stop] {
   padding: 15px 25px;
@@ -61,12 +66,21 @@ button[data-stop]:disabled {
   color: #0077b3;
 }
 
+.start {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
 .timer {
   display: flex;
+  justify-content: center;
   font-size: 60px;
   font-weight: bold;
   color: #0077b3;
   margin-top: 20px;
+}
+#datetime-picker {
+  text-align: center;
 }
 
 .field {
@@ -95,7 +109,7 @@ button[data-stop]:disabled {
   margin-bottom: 10px;
 }
 
-.form input[type="number"] {
+.form input[type='number'] {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
@@ -104,8 +118,7 @@ button[data-stop]:disabled {
   outline: none;
 }
 
-
-.form button[type="submit"] {
+.form button[type='submit'] {
   padding: 15px 25px;
   font-size: 18px;
   background-color: #0077b3;
@@ -117,6 +130,6 @@ button[data-stop]:disabled {
   margin-top: 20px;
 }
 
-.form button[type="submit"]:hover {
+.form button[type='submit']:hover {
   background-color: #005599;
 }
