--- a/src/css/common.css
+++ b/src/css/common.css
@@ -129,6 +129,31 @@ button[data-stop]:disabled {
   margin: 0 auto;
 }
 
+/* .form {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  max-width: 400px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+} */
+/* .form {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  max-width: 400px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+} */
+
 .form label {
   display: block;
   margin-bottom: 10px;
@@ -144,6 +169,7 @@ button[data-stop]:disabled {
 }
 
 .form button[type='submit'] {
+  display: block;
   padding: 15px 25px;
   font-size: 18px;
   background-color: #0077b3;
@@ -153,6 +179,8 @@ button[data-stop]:disabled {
   cursor: pointer;
   transition: background-color 0.3s ease;
   margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .form button[type='submit']:hover {
