--- a/src/css/common.css
+++ b/src/css/common.css
@@ -178,7 +178,8 @@ button[data-stop]:disabled {
   border-radius: 50px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  margin-top: 20px;
+  margin-top: 30px;
+  margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
 }
